{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 446,
  "lineage": "2c441413-ed96-d6b9-8e50-d13dcadd391c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkInterfaces/FWeth0",
            "internal_domain_name_suffix": "mhfphlb4mjpevnnuxrm1mxtlic.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig0",
                "primary": true,
                "private_ip_address": "10.5.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/publicIPAddresses/fwPublicIP",
                "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Mgmt"
              }
            ],
            "location": "southcentralus",
            "name": "FWeth0",
            "private_ip_address": "10.5.0.4",
            "private_ip_addresses": [
              "10.5.0.4"
            ],
            "resource_group_name": "vvrg12",
            "tags": {
              "displayName": "NetworkInterfaces0"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIP_0",
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_subnet.PAN_FW_Subnet0",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC0_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkInterfaces/DBeth0",
            "internal_domain_name_suffix": "mhfphlb4mjpevnnuxrm1mxtlic.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig4",
                "primary": true,
                "private_ip_address": "10.5.4.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/DB"
              }
            ],
            "location": "southcentralus",
            "name": "DBeth0",
            "private_ip_address": "10.5.4.5",
            "private_ip_addresses": [
              "10.5.4.5"
            ],
            "resource_group_name": "vvrg12",
            "tags": {
              "displayName": "NetworkInterfaces4"
            }
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_subnet.PAN_FW_Subnet4",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC0_Web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkInterfaces/Webeth0",
            "internal_domain_name_suffix": "mhfphlb4mjpevnnuxrm1mxtlic.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig3",
                "primary": true,
                "private_ip_address": "10.5.3.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Web"
              }
            ],
            "location": "southcentralus",
            "name": "Webeth0",
            "private_ip_address": "10.5.3.5",
            "private_ip_addresses": [
              "10.5.3.5"
            ],
            "resource_group_name": "vvrg12",
            "tags": {
              "displayName": "NetworkInterfaces3"
            }
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_subnet.PAN_FW_Subnet3",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkInterfaces/FWeth1",
            "internal_domain_name_suffix": "mhfphlb4mjpevnnuxrm1mxtlic.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.5.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/publicIPAddresses/WebPublicIP",
                "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Untrust"
              }
            ],
            "location": "southcentralus",
            "name": "FWeth1",
            "private_ip_address": "10.5.1.4",
            "private_ip_addresses": [
              "10.5.1.4"
            ],
            "resource_group_name": "vvrg12",
            "tags": {
              "displayName": "NetworkInterfaces1"
            }
          },
          "dependencies": [
            "azurerm_public_ip.PublicIP_1",
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_subnet.PAN_FW_Subnet1",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "VNIC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkInterfaces/FWeth2",
            "internal_domain_name_suffix": "mhfphlb4mjpevnnuxrm1mxtlic.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig2",
                "primary": true,
                "private_ip_address": "10.5.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Trust"
              }
            ],
            "location": "southcentralus",
            "name": "FWeth2",
            "private_ip_address": "10.5.2.4",
            "private_ip_addresses": [
              "10.5.2.4"
            ],
            "resource_group_name": "vvrg12",
            "tags": {
              "displayName": "NetworkInterfaces2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_subnet.PAN_FW_Subnet2",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "PAN_FW_NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkSecurityGroups/DefaultNSG",
            "location": "southcentralus",
            "name": "DefaultNSG",
            "resource_group_name": "vvrg12",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Intra",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "10.5.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Outside-From-IP",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "0.0.0.0/0",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 4001,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.5.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowVnetOutbound",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "10.5.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deafult-Deny",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyAllOutbound",
                "priority": 4095,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIP_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/publicIPAddresses/fwPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "fwPublicIP",
            "resource_group_name": "vvrg12",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIP_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "pan-web8193",
            "fqdn": "pan-web8193.southcentralus.cloudapp.azure.com",
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/publicIPAddresses/WebPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "WebPublicIP",
            "resource_group_name": "vvrg12",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "PAN_FW_RT_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/routeTables/DB-to-FW",
            "location": "southcentralus",
            "name": "DB-to-FW",
            "resource_group_name": "vvrg12",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "DB-default-route",
                "next_hop_in_ip_address": "10.5.2.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.5.3.0/24",
                "name": "DB-to-Firewall-Web",
                "next_hop_in_ip_address": "10.5.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "PAN_FW_RT_Trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/routeTables/Trust-to-intranetwork",
            "location": "southcentralus",
            "name": "Trust-to-intranetwork",
            "resource_group_name": "vvrg12",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Trust-to-intranetwork",
                "next_hop_in_ip_address": "10.5.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "PAN_FW_RT_Web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/routeTables/Web-to-FW",
            "location": "southcentralus",
            "name": "Web-to-FW",
            "resource_group_name": "vvrg12",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "Web-default-route",
                "next_hop_in_ip_address": "10.5.2.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.5.4.0/24",
                "name": "Web-to-Firewall-DB",
                "next_hop_in_ip_address": "10.5.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PAN_FW_Subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Mgmt",
            "name": "Mgmt",
            "resource_group_name": "vvrg12",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PAN_FW_Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Untrust",
            "name": "Untrust",
            "resource_group_name": "vvrg12",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PAN_FW_Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Trust",
            "name": "Trust",
            "resource_group_name": "vvrg12",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PAN_FW_Subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Web",
            "name": "Web",
            "resource_group_name": "vvrg12",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PAN_FW_Subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/DB",
            "name": "DB",
            "resource_group_name": "vvrg12",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Mgmt",
            "network_security_group_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkSecurityGroups/DefaultNSG",
            "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Mgmt"
          },
          "dependencies": [
            "azurerm_network_security_group.PAN_FW_NSG",
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_subnet.PAN_FW_Subnet0",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Untrust",
            "network_security_group_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/networkSecurityGroups/DefaultNSG",
            "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Untrust"
          },
          "dependencies": [
            "azurerm_network_security_group.PAN_FW_NSG",
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_subnet.PAN_FW_Subnet1",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Trust",
            "route_table_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/routeTables/Trust-to-intranetwork",
            "subnet_id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Trust"
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG",
            "azurerm_route_table.PAN_FW_RT_Trust",
            "azurerm_subnet.PAN_FW_Subnet2",
            "azurerm_virtual_network.PAN_FW_VNET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "PAN_FW_VNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.5.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "acf3ca61-623e-4a5e-b5b4-bc59b65e6b42",
            "id": "/subscriptions/33054b7c-3142-41c9-b5d0-6b9ff231c333/resourceGroups/vvrg12/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "southcentralus",
            "name": "vnet1",
            "resource_group_name": "vvrg12",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.PAN_FW_RG"
          ]
        }
      ]
    }
  ]
}